HEIC形式の画像に対応

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -811,6 +811,9 @@ input[type="submit"] {
   background-size: cover;
 }
 
+.error-message {
+  color: red;
+}
 /* テーブル */
 #select-image {
   margin: 20px 0;
