--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -829,7 +829,7 @@ input[type="submit"] {
 }
 .modal-attachment__content {
   position: relative;
-  width: 1100px;
+  width: 95%;
   height: 100vh;
   margin-right: auto;
   margin-left: auto;
@@ -839,15 +839,15 @@ input[type="submit"] {
 }
 .modal-attachment__in {
   position: relative;
-  width: 960px;
-  padding: 40px 50px;
+  width: 90%;
+  padding: 40px 0;
   background-color: #fff;
   border-radius: 4px;
   text-align: center;
 }
 .modal-attachment__btn-close {
   top: -60px;
-  right: -50px;
+  right: -27px;
   position: absolute;
   z-index: 2;
   padding-top: 36px;
